[gd_scene load_steps=16 format=3 uid="uid://uacdkbkqw6cm"]

[ext_resource type="Script" path="res://Scripts/Split Screen/students_apartment_root.gd" id="1_k2yro"]
[ext_resource type="Script" path="res://Scripts/Split Screen/students_apartment_camera.gd" id="2_4cglq"]
[ext_resource type="PackedScene" uid="uid://gy8ld0ak85om" path="res://Scenes/rat/rat.tscn" id="2_kuwri"]
[ext_resource type="Texture2D" uid="uid://do2ltbciuam68" path="res://Sprites/Screen Layouts/grandmas_apartment_draft.png" id="3_i0kis"]
[ext_resource type="Script" path="res://Scripts/College_Student/college_student.gd" id="4_on6nq"]
[ext_resource type="Texture2D" uid="uid://c123vsa0laeny" path="res://Sprites/College Student/College_Student_1.png" id="4_rsyic"]
[ext_resource type="PackedScene" uid="uid://du41tmmbagmfr" path="res://Scenes/Resource_Drop/resource_drop.tscn" id="5_lbw76"]
[ext_resource type="Script" path="res://Scenes/rat/rat_spawner_kitchen_counter.gd" id="6_vbs84"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_cmikq"]
vertices = PackedVector2Array(786.297, 116, 873, -222.883, 873, 902, 768.852, 181.148, 768.852, 50.8516, 721.148, 228.852, 723.5, 902, 721.148, 3.15625, 188, -215.109, 656, -14.2969, 590.852, 3.15625, 188, 78, 543.156, 50.8516, 525.703, 116, 173, 520, 346, 1009, 346, 821.5, 656, 246.297, 723.5, 1084, 76.3281, 702.313, -574.602, 801.297, -567.359, 586.883, 72.5, 642.961, 180.5, 821.5, 67.0391, 520, 180.5, 828, 72.8125, 828, 873, 1566.9, 52.2813, 1559.09, 61.75, 1222, 198, 1222, 873, 1084, 198, 1009, 590.852, 228.852, 173, 78, 543.156, 181.148)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 0, 2), PackedInt32Array(1, 0, 4), PackedInt32Array(5, 3, 2, 6), PackedInt32Array(1, 4, 7), PackedInt32Array(8, 1, 7, 9), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(11, 10, 12), PackedInt32Array(11, 12, 13, 14), PackedInt32Array(15, 16, 17, 5, 6, 18), PackedInt32Array(19, 20, 21, 22), PackedInt32Array(23, 19, 22, 24, 14, 16), PackedInt32Array(25, 26, 19, 23), PackedInt32Array(27, 28, 29, 30), PackedInt32Array(31, 27, 30, 18), PackedInt32Array(18, 30, 32, 15), PackedInt32Array(33, 17, 16, 14), PackedInt32Array(14, 34, 11), PackedInt32Array(14, 13, 35), PackedInt32Array(14, 35, 33)])
outlines = Array[PackedVector2Array]([PackedVector2Array(178, -225, 883, -233, 883, 1577, 42, 1569, 66, 721, -585, 813, -577, 576, 64, 647, 37, 68, 178, 68)])

[sub_resource type="CircleShape2D" id="CircleShape2D_aitcx"]
radius = 119.942

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sisoq"]
size = Vector2(145.5, 167.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x24h4"]
size = Vector2(112, 434)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buh8m"]
size = Vector2(136, 374)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hchtt"]
size = Vector2(141, 162)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxk4k"]
size = Vector2(14, 38)

[node name="students_apartment" type="Node2D"]
script = ExtResource("1_k2yro")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_cmikq")

[node name="Furniture" type="Node2D" parent="NavigationRegion2D"]

[node name="Kitchen Table" type="StaticBody2D" parent="NavigationRegion2D/Furniture"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavigationRegion2D/Furniture/Kitchen Table"]
position = Vector2(656, 116)
shape = SubResource("CircleShape2D_aitcx")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationRegion2D/Furniture/Kitchen Table"]
position = Vector2(656, 116)
affect_navigation_mesh = true

[node name="Ottoman" type="StaticBody2D" parent="NavigationRegion2D/Furniture"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavigationRegion2D/Furniture/Ottoman"]
position = Vector2(263.25, 915.25)
shape = SubResource("RectangleShape2D_sisoq")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationRegion2D/Furniture/Ottoman"]
position = Vector2(263.25, 915.25)
affect_navigation_mesh = true

[node name="Shelf" type="StaticBody2D" parent="NavigationRegion2D/Furniture"]
position = Vector2(107, 293)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavigationRegion2D/Furniture/Shelf"]
shape = SubResource("RectangleShape2D_x24h4")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationRegion2D/Furniture/Shelf"]
affect_navigation_mesh = true

[node name="Couch" type="StaticBody2D" parent="NavigationRegion2D/Furniture"]
position = Vector2(119, 1021)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavigationRegion2D/Furniture/Couch"]
position = Vector2(1, 4)
shape = SubResource("RectangleShape2D_buh8m")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationRegion2D/Furniture/Couch"]
position = Vector2(1, 4)
affect_navigation_mesh = true

[node name="TV" type="StaticBody2D" parent="NavigationRegion2D/Furniture"]
position = Vector2(804, 993)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavigationRegion2D/Furniture/TV"]
shape = SubResource("RectangleShape2D_hchtt")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationRegion2D/Furniture/TV"]
affect_navigation_mesh = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("2_4cglq")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(6, -530)
texture = ExtResource("3_i0kis")
centered = false

[node name="Position_Markers" type="Node2D" parent="."]

[node name="Sink_Marker" type="Marker2D" parent="Position_Markers"]
position = Vector2(491, -147)

[node name="Oven_Marker" type="Marker2D" parent="Position_Markers"]
position = Vector2(236, -74)

[node name="DinnerTable_Marker" type="Marker2D" parent="Position_Markers"]
position = Vector2(657, 281)

[node name="Couch_Marker" type="Marker2D" parent="Position_Markers"]
position = Vector2(255, 1086)

[node name="Desk_Marker" type="Marker2D" parent="Position_Markers"]
position = Vector2(265, 1440)

[node name="Bed_Marker" type="Marker2D" parent="Position_Markers"]
position = Vector2(661, 1431)

[node name="Shelf_Marker" type="Marker2D" parent="Position_Markers"]
position = Vector2(245, 300)

[node name="Exit_Marker" type="Marker2D" parent="Position_Markers"]
position = Vector2(-486, 691)

[node name="Initial_Spot" type="Marker2D" parent="Position_Markers"]
position = Vector2(513, 644)

[node name="College_Student" type="CharacterBody2D" parent="." node_paths=PackedStringArray("room_target")]
z_index = 1
position = Vector2(520, 669)
script = ExtResource("4_on6nq")
resource_drop = ExtResource("5_lbw76")
room_target = NodePath("../Position_Markers/Initial_Spot")

[node name="Sprite2D" type="Sprite2D" parent="College_Student"]
rotation = 1.5708
texture = ExtResource("4_rsyic")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="College_Student"]
path_desired_distance = 30.0
avoidance_enabled = true
radius = 50.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0.0235294, 1, 1)

[node name="Rat_Spawner_Kitchen_Counter" type="Area2D" parent="."]
position = Vector2(908, -314)
script = ExtResource("6_vbs84")
rat_scene = ExtResource("2_kuwri")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rat_Spawner_Kitchen_Counter"]
shape = SubResource("RectangleShape2D_hxk4k")

[node name="Drops" type="Node2D" parent="."]

[node name="resource_drop" parent="." instance=ExtResource("5_lbw76")]
position = Vector2(580, 470)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
